--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.version_moshi = "1.9.3"
     ext.version_retrofit = "2.9.0"
     ext.room_version = "2.2.6"
+    ext.fragment_ktx = "1.3.2"
 
     repositories {
         google()
