--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     ext.version_retrofit = "2.9.0"
     ext.room_version = "2.2.6"
     ext.fragment_ktx = "1.3.2"
+    ext.nav_version = "2.3.4"
+
 
     repositories {
         google()
@@ -21,6 +23,9 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.5'
         // Hilt
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        // Safe Args
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
